fix footer top alignment

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -217,6 +217,9 @@ header{
 }
 
 footer{
+	h5{
+		margin-top: 6px;
+	}
 	p{
 		font-weight: 300;
 	}
